@@ -1,4 +1,4 @@
-SUBDIRS = src/productOG tests
+SUBDIRS = src/productOG src/minimize tests
 
 # delete all files that can be created by other files
 svn-clean: maintainer-clean
@@ -11,7 +11,7 @@ svn-clean: maintainer-clean
 	-rm -f missing
 	-rm -f ylwrap
 	-rm -f -r autom4te.cache
-	-rm -f src/productOG/Makefile.in
+	-rm -f src/productOG/Makefile.in src/minimize/Makefile.in
 	-rm -f -r src/.deps
 	-rm -f src/config.h.in
 	-rm -f tests/Makefile.in
