@@ -1,0 +1,54 @@
+bin_PROGRAMS = minimize
+
+minimize_SOURCES = syntax_og.yy lexer_og.ll \
+                   main.cc \
+                   Node.h Node.cc \
+                   Graph.h Graph.cc \
+                   Formula.h Formula.cc \
+                   helpers.h helpers.cc \
+                   cmdline.c cmdline.h \
+                   verbose.cc verbose.h \
+                   types.h
+
+#############################################################################
+# EVERYTHING BELOW THIS LINE IS GENERIC - YOU MUST NOT CHANGE ANYTHING BELOW
+#############################################################################
+
+#---------------------------------------------------#
+# GENERIC: initialization for other generic targets #
+#---------------------------------------------------#
+BUILT_SOURCES =
+EXTRA_DIST =
+MAINTAINERCLEANFILES =
+DISTCLEANFILES = 
+
+#--------------------------------------------------------------#
+# GENERIC: organize distribution and cleaning of Bison sources #
+#--------------------------------------------------------------#
+BISON_FILES = $(filter %.yy,$(minimize_SOURCES))
+BUILT_SOURCES += $(BISON_FILES:.yy=.cc)
+EXTRA_DIST += $(BISON_FILES:.yy=.h)
+MAINTAINERCLEANFILES += $(BISON_FILES:.yy=.h)
+
+#----------------------------------------------------------------#
+# GENERIC: copy the content of the config.log file to a C header #
+#----------------------------------------------------------------#
+config-log.h: $(top_builddir)/config.log
+	$(AM_V_GEN)
+	$(AM_V_at)echo "/// the content of the file 'config.log' generated by the configure script" > $@
+	$(AM_V_at)echo "#define CONFIG_LOG \\" >> $@
+	$(AM_V_at)$(SED) -e 's/\\/\\\\/g' $< | $(SED) -e 's/"/\\"/g' | $(AWK) '{print "\""$$0"\\n\"\\"}' >> $@
+	$(AM_V_at)echo '""' >> $@
+	$(AM_V_at)echo "" >> $@
+BUILT_SOURCES += config-log.h
+DISTCLEANFILES += config-log.h
+
+#----------------------------------------------------------#
+# GENERIC: use GNU gengetopt to create command line parser #
+#----------------------------------------------------------#
+.ggo.c:
+	$(AM_V_GEN)$(GENGETOPT) --input=$<
+GENGETOPT_FILES = cmdline.ggo
+BUILT_SOURCES += $(GENGETOPT_FILES:.ggo=.c)
+EXTRA_DIST += $(GENGETOPT_FILES)
+MAINTAINERCLEANFILES += $(GENGETOPT_FILES:.ggo=.c) $(GENGETOPT_FILES:.ggo=.h)
